--- a/css/leaflet-sidebar.css
+++ b/css/leaflet-sidebar.css
@@ -1,8 +1,8 @@
 .sidebar {
   position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
+  right: 0;
+  top: 10px;
+  bottom: 10px;
   width: 100%;
   overflow: hidden;
   z-index: 2000; }
@@ -10,29 +10,31 @@
     width: 40px; }
   @media (min-width: 768px) {
     .sidebar {
-      left: 10px;
+      right: 10px;
       top: 10px;
       bottom: 10px;
       transition: width 500ms; } }
   @media (min-width: 768px) and (max-width: 991px) {
     .sidebar {
-      width: 305px; } }
+      width: 605px; } }
   @media (min-width: 992px) and (max-width: 1199px) {
     .sidebar {
-      width: 390px; } }
+      width: 690px; } }
   @media (min-width: 1200px) {
     .sidebar {
-      width: 460px; } }
+      width: 950px; } }
 
 .sidebar-tabs {
   position: absolute;
+  right: 0px;
   top: 0;
   bottom: 0;
   width: 40px;
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #fff; }
+  z-index: 300;
+  background-color: rgba(255, 255, 255, 0.75); }
   .sidebar-tabs > li {
     width: 100%;
     height: 40px;
@@ -57,16 +59,15 @@
 
 .sidebar-content {
   position: absolute;
-  left: 40px;
-  right: 0;
+  right: 40px;
   top: 0;
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.75);
-  overflow-x: hidden;
   overflow-y: auto; }
 
 .sidebar-pane {
   display: none;
+  float: right;
   right: 0;
   box-sizing: border-box;
   padding: 10px 20px; }
@@ -74,19 +75,19 @@
     display: block; }
   @media (min-width: 768px) and (max-width: 991px) {
     .sidebar-pane {
-      width: 265px; } }
+      width: 565px; } }
   @media (min-width: 992px) and (max-width: 1199px) {
     .sidebar-pane {
-      width: 350px; } }
+      width: 650px; } }
   @media (min-width: 1200px) {
     .sidebar-pane {
-      width: 420px; } }
+      width: 910px; } }
 
 .sidebar-map {
-  margin-left: 40px; }
+  margin-right: 40px; }
   @media (min-width: 768px) {
     .sidebar-map {
-      margin-left: 0; } }
+      margin-right: 0; } }
 
 .sidebar {
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65); }
