adding limit playback by usertype

--- a/css/p2.css
+++ b/css/p2.css
@@ -126,3 +126,10 @@ ul#day {
   display: inline;
 }
 
+#usertype_play_form {
+  position: absolute;
+  top: 120px;
+  left: 600px;
+  display: inline;
+}
+
