--- a/css/p2.css
+++ b/css/p2.css
@@ -133,3 +133,21 @@ ul#day {
   display: inline;
 }
 
+#scale {
+  position: absolute;
+  left: 100%;
+  right: 100%;
+  bottom: 2px;
+  z-index: 2000;
+}
+
+.legend label,
+.legend span {
+  display:block;
+  float:left;
+  height:15px;
+  width:20%;
+  text-align:center;
+  font-size:9px;
+  color:#808080;
+  }
