--- a/css/p2.css
+++ b/css/p2.css
@@ -141,13 +141,6 @@ ul#day {
   z-index: 2000;
 }
 
-.legend label,
-.legend span {
-  display:block;
-  float:left;
-  height:15px;
-  width:20%;
-  text-align:center;
-  font-size:9px;
-  color:#808080;
-  }
+#playbackError {
+  color: red;
+}
