--- a/css/p2.css
+++ b/css/p2.css
@@ -133,6 +133,13 @@ ul#day {
   display: inline;
 }
 
+#age_play_form {
+  position: absolute;
+  top: 200px;
+  left: 600px;
+  display: inline;
+}
+
 #scale {
   position: absolute;
   left: 100%;
