--- a/css/p2.css
+++ b/css/p2.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Muli:400,300italic);
+
 html, body, #map {
   width: 100%;
   height: 100%;
@@ -151,3 +153,18 @@ ul#day {
 #playbackError {
   color: red;
 }
+
+.sidebar-header {
+  font-family: 'Muli', sans-serif;
+  font-style: italic;
+  font-weight:200;
+  margin-bottom:0.7em;
+/*  background: #373737;
+  color: #f7f7f7;
+  opacity:0.80;*/
+}
+
+/*h2.sidebar-header {
+  padding:0.3em;
+}
+*/
