--- a/css/p2.css
+++ b/css/p2.css
@@ -292,3 +292,24 @@ transform:scale(0.7);
 opacity:0.1}
 
 }
+
+#weather {
+  position: absolute;
+  top: 10px;
+  z-index: 3000;
+  left: 60px;
+  padding-left: 10px;
+  padding-top: 5px;
+  font-size: 16pt;
+  width: 180px;
+  background-color: rgba(255, 255, 255, 0.60); 
+}
+
+#date {
+  font-size: 8pt;
+  font-weight: bold;
+  position: absolute;
+  top: 35px;
+  left: 67px;
+
+}
