--- a/css/p2.css
+++ b/css/p2.css
@@ -447,3 +447,18 @@ opacity:0.1}
   z-index: 3000;
 }
 
+#overload-button {
+  position: absolute;
+  top: 15px;
+  left: 300px;
+  z-index: 3000;
+}
+
+#overload-control {
+  position: absolute;
+  top: 35px;
+  left: 0px;
+  width: 400px;
+  height: 80px;
+  z-index: 3000;
+}
