--- a/css/p2.css
+++ b/css/p2.css
@@ -497,3 +497,9 @@ opacity:0.1}
   font-size: 8pt;
 }
 
+#github {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.80);
+}
