--- a/css/p2.css
+++ b/css/p2.css
@@ -503,3 +503,34 @@ opacity:0.1}
   left: 0;
   background-color: rgba(255, 255, 255, 0.80);
 }
+
+#flagday{ 
+margin-left: 160px;
+margin-top: 20px;
+}
+
+#flaghour{
+margin-left: 160px;
+margin-top: 20px;
+}
+
+#flagdist{
+margin-left: 300px;
+margin-top: 20px;
+}
+
+#flagyear{
+margin-left: 190px;
+margin-top: 20px;
+}
+
+#flagpie img {
+  margin-left: 135px;
+  margin-top: 20px;
+  width: 69px;
+}
+
+#ssspie img {
+  margin-right: 135px;
+  margin-top:20px;
+  
